== 0.5.0

* Enhancements
  * Update to Rails 3.2.0.rc2 and Contour 0.9.0
  * Downloaders now have the following changes:
    * Downloaders are now associated with an external user
    * Downloaders are now identifiable by a digest of the file names
    * Tracking now exists per user per file by
      * Count of checksum requests
      * Count of file download requests
  * Segments now have the following changes:
    * Segments have a many to many associate with downloaders
    * A segment's file checksum is not computed until it is specifically requested through a download checksum request
  * JSON messaging has been implemented for downloaders, XML messaging will be deprecated in a future release

* Testing
  * SimpleCov added for test coverage
  * TravisCI configuration files added

== 0.4.0

* Enhancements
  * Pagination added to downloaders and segments index pages

* Documentation
  * Default database for windows is now set to pg instead of sqlite3
  * The default downloader type is now a Ruby program wrapped inside of an executable that uses Ruby Net class to incrementally download files
  * Peer-to-peer file downloader generation has been removed

* Bug Fix
  * Assets compression turned off since Windows currently fails on rake assets:precompile

== 0.3.0

* Enhancements
  * Update to Rails 3.1.1
  * Update authentication interface to use Contour 0.5.6

* Documentation
  * Added information on how to setup Elastic as a robust/reliable Windows 7 Service using Thin Server and Microsoft Resource Kit Tools

* Testing
  * Test suite updated to contain base set of passing test cases

== 0.2.0

* Enhancements
  * Switch to file serving via ruby script
  * Allow multiple locations for stored files, downloaders now require a folder location

== 0.1.0

* Initial implementation of torrents controller

== 0.0.0

* Initial version with user, authentications, menu, stylesheets, images, and javascript.